[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://game/ui/menus/campfire_menu.gd" id="1_script"]
[ext_resource type="Theme" path="res://game/ui/theme/ui_theme.tres" id="2_theme"]

[node name="CampfireMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")
visible = false

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.55)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.8

[node name="Tabs" type="TabContainer" parent="Panel"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -48.0

[node name="Fuel" type="VBoxContainer" parent="Panel/Tabs"]
layout_mode = 2

[node name="FuelList" type="RichTextLabel" parent="Panel/Tabs/Fuel"]
layout_mode = 2
bbcode_enabled = true
text = "Палки: 0"
fit_content = true
scroll_active = false

[node name="AddFuelButton" type="Button" parent="Panel/Tabs/Fuel"]
layout_mode = 2
text = "Пополнить палками"

[node name="Cook" type="VBoxContainer" parent="Panel/Tabs"]
layout_mode = 2

[node name="CookList" type="RichTextLabel" parent="Panel/Tabs/Cook"]
layout_mode = 2
bbcode_enabled = true
text = "Сырое мясо: 0 кг"
fit_content = true
scroll_active = false

[node name="CookButton" type="Button" parent="Panel/Tabs/Cook"]
layout_mode = 2
text = "Готовить всё сырое мясо"

[node name="TakeButton" type="Button" parent="Panel/Tabs/Cook"]
layout_mode = 2
text = "Забрать готовое"

[node name="Status" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 12.0
offset_top = 360.0
offset_right = -12.0
offset_bottom = 390.0
horizontal_alignment = 1
text = ""

[connection signal="pressed" from="Panel/Tabs/Fuel/AddFuelButton" to="." method="_on_AddFuelButton_pressed"]
[connection signal="pressed" from="Panel/Tabs/Cook/CookButton" to="." method="_on_CookButton_pressed"]
[connection signal="pressed" from="Panel/Tabs/Cook/TakeButton" to="." method="_on_TakeButton_pressed"]
